--- a/app/assets/stylesheets/dealzons.scss
+++ b/app/assets/stylesheets/dealzons.scss
@@ -6,6 +6,7 @@
    Index Page
  --------------------------------------------- */
 
+/*
 .dealzon_card {
   width: calc(25% - 1.6rem);
   margin: 0.8rem;
@@ -15,6 +16,7 @@
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 2px 5px rgba(0, 0, 0, 0.05);
   transition: box-shadow 300ms;
 }
+*/
 .dealzon_card:hover {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05), 0 5px 15px rgba(0, 0, 0, 0.05);
 }
