--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -31,15 +31,18 @@
   margin: -0.8rem;
 }
 .card {
-  width: calc(33.3% - 1.6rem);
+  /* width: calc(33.3% - 1.6rem); */
   /* width: calc(25% - 1.6rem); */
-  margin: 0.8rem;
+  /* margin: 0.8rem; */
+  width: calc(27% - 1.6rem);
+  margin: 0.3rem;
   background: #fff;
   overflow: hidden;
   border-radius: .5rem;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 2px 5px rgba(0, 0, 0, 0.05);
   transition: box-shadow 300ms;
 }
+
 .card:hover {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05), 0 5px 15px rgba(0, 0, 0, 0.05);
 }
