--- a/app/views/blogs/_sidebar_index.html.erb
+++ b/app/views/blogs/_sidebar_index.html.erb
@@ -1,9 +1,9 @@
 <aside class="sidebar">
-  
+
   <!-- Blurb -->
     <section>
-      <h2>Real Time Amazon Deals</h2>
-      <p>Amazon offers thousands of great deals, but, sifting through the endless pages can be a huge hassle. We have just made your life easier. We offer a quick way to find the best deals on Amazon Simply click on the percentage off next to the category you want to browse. You will be redirected to a new window containing your Amazon search results.</p>
+      <h2>Magna etiam</h2>
+      <p>Fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem sed euismod placerat. Vivamus porttitor et magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper lorem ipsum.</p>
       <ul class="actions">
         <li><a href="#" class="button">Learn More</a></li>
       </ul>
@@ -11,9 +11,9 @@
 
   <!-- Featured posts -->
     <section class="featured-posts">
-      <h2>Recent Blog</h2>
+      <h2>Sed aliquam</h2>
       <article>
-        <a href="#" class="image fit"><img src="https://images-na.ssl-images-amazon.com/images/I/81F%2BkHvKecL._SL1500_.jpg" alt=""></a>
+        <a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
         <header>
           <span class="date">September 19, 2016</span>
           <h3><a href="#">Non velit accumsan cursus gravida amet sapien</a></h3>
@@ -24,29 +24,6 @@
         </ul>
       </article>
     </section>
-
-    <section>
-     <h2>Popular Post</h2>
-     <div id="sidebar">
-      <ul id="side-rcnt-thumb-post-list">
-        <% @post_side.each do |ps| %>
-          <li>
-            <div class="srtpl-l">
-              <%= link_to (image_tag ps.post_image), ps, :class => "srtpl-a" %>
-         <!-- <a href="#" class="srtpl-a"><img class="srtpl-thumb" src="<%= ps.post_image %>" alt=""></a> -->
-            </div>
-            <div class="srtpl-r">
-              <%= link_to ps.post_title, ps, :class => "srtpl-n" %>
-            </div>
-          </li>
-        <% end %>
-      </ul>
-    </div><br/>
-    
-    <ul class="actions">
-      <li><a href="#" class="button">Learn More</a></li>
-    </ul>
-   </section>
 
   <!-- Posts -->
     <section>
@@ -84,6 +61,54 @@
       <ul class="actions">
         <li><a href="#" class="button">More Posts</a></li>
       </ul>
+    </section>
+     
+     <section>
+     <h2>Arcu dolore</h2>
+     <div id="sidebar">
+      <ul id="side-rcnt-thumb-post-list">
+
+        <li>
+          <div class="srtpl-l">
+            <a href="#" class="srtpl-a"><img class="srtpl-thumb" src="//source.unsplash.com/500x304" alt=""></a>
+          </div>
+          <div class="srtpl-r">
+              <a href="#" class="srtpl-n">Photo Gallery with PHP, MySQL, ImageMagick and jQuery</a>
+          </div>
+        </li>
+
+        <li class="srtpl-li">
+          <div class="srtpl-l">
+              <a href="#" class="srtpl-a"><img class="srtpl-thumb" src="//source.unsplash.com/500x304" alt=""></a>
+          </div>
+          <div class="srtpl-r">
+              <a href="#" class="srtpl-n">Advanced search form with PHP and MySQL</a>
+          </div>
+        </li>
+
+        <li class="srtpl-li">
+          <div class="srtpl-l">
+              <a href="#" class="srtpl-a"><img class="srtpl-thumb" src="//source.unsplash.com/500x304" alt=""></a>
+          </div>
+          <div class="srtpl-r">
+              <a href="#" class="srtpl-n">Secure Online Contact Form with Attachment</a>
+          </div>
+        </li>
+
+        <li class="srtpl-li">
+          <div class="srtpl-l">
+              <a href="#" class="srtpl-a"><img class="srtpl-thumb" src="//source.unsplash.com/500x304" alt=""></a>
+          </div>
+          <div class="srtpl-r">
+              <a href="#" class="srtpl-n">Photo Gallery with Image Tagging</a>
+          </div>
+        </li>
+
+      </ul>
+    </div><br/>
+    <ul class="actions">
+      <li><a href="#" class="button">Learn More</a></li>
+    </ul>
     </section>
 
 </aside>
