--- a/app/views/blogs/edit.html.erb
+++ b/app/views/blogs/edit.html.erb
@@ -1,3 +1,8 @@
-<h1>This is Edit Page</h1>
-
-<%= render 'form' %>
+<header id="header">
+  <%= render 'posts/navbar' %> 
+</header>
+<div class="wrapper">
+  <section class="main">
+   <%= render 'form' %>
+  </section>
+</div>
