--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -29,7 +29,7 @@
         <div class="grid">
 
          <% @events.each do |event| %>
-          <div class="dealzon_card">
+          <div class="card">
             <div class="card--image">
               <%= link_to (image_tag event.eb_image), event %>
             </div>
