For auto deploy script

--- a/app/views/dealzons/_sidebar_index.html.erb
+++ b/app/views/dealzons/_sidebar_index.html.erb
@@ -145,7 +145,7 @@
 
    <!-- Featured posts -->
     <section class="featured-posts">
-      <h2>Recent Blog</h2>
+      <h2>LATEST BLOG</h2>
       <article>
         <a href="#" class="image fit"><img src="https://images-na.ssl-images-amazon.com/images/I/81F%2BkHvKecL._SL1500_.jpg" alt=""></a>
         <header>
