--- a/app/views/events/_navbar.html.erb
+++ b/app/views/events/_navbar.html.erb
@@ -10,7 +10,7 @@
     <li><a href="/">Home</a></li>
 
     <li>
-      <a href="#" class="icon fa-angle-down">Category</a>
+      <a href="#" class="icon fa-angle-down">Categories</a>
       <ul>
         <li><%=link_to "Everything", root_path %></li>
         <% Category.all.each do |category| %>
@@ -20,7 +20,7 @@
     </li>
 
     <li>
-      <a href="#" class="icon fa-angle-down">Store</a>
+      <a href="#" class="icon fa-angle-down">Stores</a>
       <ul>
        <li><a href="/dealzons">Amazon</a></li>
        <li>
