--- a/app/views/dealzons/show.html.erb
+++ b/app/views/dealzons/show.html.erb
@@ -109,7 +109,7 @@
       </div><!--/.show_detail_wrap-->
 
        <div class="related_show">
-        <h1>ou may also be interested in the following product(s)</h1>
+        <h1>You may also be interested in the following product(s)</h1>
         <% @dealzon_show.each do |deal| %>
          <% if deal.acategory_id == @dealzon.acategory_id %> 
          <div class="related_card">
