--- a/app/views/dealzons/_navbar.html.erb
+++ b/app/views/dealzons/_navbar.html.erb
@@ -31,7 +31,7 @@
             <% end %>
           </ul>
        </li>
-       <li><a href="/events">eBay</a></li>
+       <li><a href="/blogs">eBay</a></li>
       </ul>
     </li>
 
