--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -23,7 +23,7 @@
       <a href="#" class="icon fa-angle-down">Stores</a>
       <ul>
        <li><a href="/dealzons">Amazon</a></li>
-       <li><a href="#">eBay</a></li>
+       <li><a href="/blogs">eBay</a></li>
       </ul>
     </li>
 
