--- a/app/views/dealzons/_navbar.html.erb
+++ b/app/views/dealzons/_navbar.html.erb
@@ -31,7 +31,7 @@
             <% end %>
           </ul>
        </li>
-       <li><a href="/blogs">eBay</a></li>
+       <li><a href="/evnets">eBay</a></li>       
       </ul>
     </li>
 
@@ -60,7 +60,7 @@
         </li>
       </ul>
     </li> -->
-    <li><a href="generic.html">Blog</a></li>
+    <li><a href="/blogs">Blog</a></li>
     <!-- <li><a href="elements.html">Elements</a></li> -->
     <!-- <li><a href="#" class="button">Log In</a></li> -->
     <% if user_signed_in? %>
