--- a/app/views/events/_navbar.html.erb
+++ b/app/views/events/_navbar.html.erb
@@ -32,38 +32,12 @@
             <% end %>
           </ul>
       </li>
-      <li><a href="/blogs">eBay</a></li>
+      <li><a href="/events">eBay</a></li>
       </ul>
     </li>
 
-    <!-- <li>
-      <a href="#" class="icon fa-angle-down">Dropdown</a>
-      <ul>
-        <li><a href="#">Option One</a></li>
-        <li><a href="#">Option Two</a></li>
-        <li><a href="#">Option Three</a></li>
-        <li>
-          <a href="#">Submenu</a>
-          <ul>
-            <li><a href="#">Option One</a></li>
-            <li><a href="#">Option Two</a></li>
-            <li><a href="#">Option Three</a></li>
-            <li><a href="#">Option Four</a></li>
-          </ul>
-          <li>
-          <a href="#">Submenu</a>
-          <ul>
-            <li><a href="#">Option One</a></li>
-            <li><a href="#">Option Two</a></li>
-            <li><a href="#">Option Three</a></li>
-            <li><a href="#">Option Four</a></li>
-          </ul>
-        </li>
-      </ul>
-    </li> -->
-    <li><a href="generic.html">Blog</a></li>
-    <!-- <li><a href="elements.html">Elements</a></li> -->
-    <!-- <li><a href="#" class="button">Log In</a></li> -->
+    <li><a href="Blogs">Blog</a></li>
+
     <% if user_signed_in? %>
       <li class="button"><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
     <% else %>
