--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -23,7 +23,7 @@
       <a href="#" class="icon fa-angle-down">Stores</a>
       <ul>
        <li><a href="/dealzons">Amazon</a></li>
-       <li><a href="/blogs">eBay</a></li>
+       <li><a href="/events">eBay</a></li>
       </ul>
     </li>
 
@@ -52,7 +52,7 @@
         </li>
       </ul>
     </li> -->
-    <li><a href="generic.html">Blog</a></li>
+    <li><a href="blogs">Blog</a></li>
     <!-- <li><a href="elements.html">Elements</a></li> -->
     <!-- <li><a href="#" class="button">Log In</a></li> -->
     <% if user_signed_in? %>
