--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -2140,7 +2140,7 @@ input, select, textarea {
     table th {
       font-size: 0.9em;
       font-weight: 600;
-      padding: 0 0.75em 0.75em 0.75em;
+      padding: 0.75em;
       text-align: left;
     }
     table thead {
