--- a/app/views/posts/_navbar.html.erb
+++ b/app/views/posts/_navbar.html.erb
@@ -7,7 +7,7 @@
 <!-- Nav -->
 <nav id="nav">
   <ul>
-    <li><a href="/">Home</a></li>
+    <li><%= link_to "Home", root_path %></li>
 
     <li>
       <a href="#" class="icon fa-angle-down">Gadgets</a>
@@ -20,46 +20,52 @@
     </li>
 
     <li>
-      <a href="#" class="icon fa-angle-down">Stores</a>
+      <a href="#" class="icon fa-angle-down">Deals</a>
       <ul>
-       <li><a href="/dealzons">Amazon</a></li>
-       <li><a href="/events">eBay</a></li>
+       <li><%= link_to "Amazon", dealzons_path %></li>
+       <li><%= link_to "eBay", events_path %></li>
       </ul>
     </li>
 
-    <!-- <li>
-      <a href="#" class="icon fa-angle-down">Dropdown</a>
-      <ul>
-        <li><a href="#">Option One</a></li>
-        <li><a href="#">Option Two</a></li>
-        <li><a href="#">Option Three</a></li>
-        <li>
-          <a href="#">Submenu</a>
+    <li><%= link_to "Blog", blogs_path %></li>
+
+    <% if can? :update, @post %>
+     <li>
+       <a href="#" class="icon fa-angle-down">Admin & Create</a>
+       <ul>
+         <li>
+            <a href="/dealzons">Gadget & Deals</a>
+            <ul>
+             <li><%= link_to "Gadget", new_post_path %></li>
+             <li><%= link_to "Amazon", new_dealzon_path %></li>
+             <li><%= link_to "eBay", new_event_path %></li>
+             <li><%= link_to "Blog", new_blog_path %></li>
+            </ul>
+         </li>
+         <li>
+          <a href="/dealzons">Create category</a>
           <ul>
-            <li><a href="#">Option One</a></li>
-            <li><a href="#">Option Two</a></li>
-            <li><a href="#">Option Three</a></li>
-            <li><a href="#">Option Four</a></li>
+           <li><%= link_to "Gadget", new_category_path %></li>
+           <li><%= link_to "Amazon", new_acategory_path %></li>
           </ul>
-          <li>
-          <a href="#">Submenu</a>
+         </li>
+         <li>
+          <a href="/dealzons">Manage category</a>
           <ul>
-            <li><a href="#">Option One</a></li>
-            <li><a href="#">Option Two</a></li>
-            <li><a href="#">Option Three</a></li>
-            <li><a href="#">Option Four</a></li>
+           <li><%= link_to "Gadget", categories_path %></li>
+           <li><%= link_to "Amazon", acategories_path %></li>
           </ul>
-        </li>
+         </li>    
+         <% if user_signed_in? %>
+          <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+         <% else %>
+          <li><%= link_to "Log in", new_user_session_path %></li>
+          <li><%= link_to "Sign up", new_user_registration_path %></li>
+         <% end %>
+
       </ul>
-    </li> -->
-    <li><a href="blogs">Blog</a></li>
-    <!-- <li><a href="elements.html">Elements</a></li> -->
-    <!-- <li><a href="#" class="button">Log In</a></li> -->
-    <% if user_signed_in? %>
-      <li class="button"><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
-    <% else %>
-      <li class="button"><%= link_to "Log in", new_user_session_path %></li>
-      <li class="button"><%= link_to "Sign up", new_user_registration_path %></li>
+    </li>
     <% end %>
+    
   </ul>
 </nav>
