--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -7,7 +7,7 @@
    <%= f.input :post_image %>
    <%= f.input :post_price_is %>
    <%= f.input :post_price_was %>
-   <%= f.select :post_spare_01, options_for_select([["It's not Crowdfunding", ""], "It's Crowdfunding"]) %><br/>
+   <%= f.select :post_spare_01, options_for_select([["No! It's not Crowdfunding", ""], "Yes! It's Crowdfunding"]) %>
    <%= f.input :post_source %>
    <%= f.input :post_youtube_01 %>
    <%= f.input :post_youtube_02 %>
